--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
         "postcss": "^8.5.1",
         "tailwindcss": "^3.4.17",
         "vite": "^6.0"
+    },
+    "dependencies": {
+        "aos": "^3.0.0-beta.6"
     }
 }
